    mgo/keystats.go, mgo/worker.go, pgp.go, pgp_types.go, responses.go:
    - Require valid UID self-sign to load key material.
    - Send proper key var to stats channel on insert/update.
    - Get UID of signature keyid in LookupKey(s), display in vindex.
    - Aggregate loading statistics, bulk upsert increments to
      reduce mongodb load.

 -- Casey Marshall <casey.marshall@gmail.com>  Sun, 17 Feb 2013 02:03:55 -0600

hockeypuck (0.8.1) precise; urgency=low

  [ Casey Marshall ]
  * mgo/worker.go, mgo/worker_test.go, pgp.go, pgp_types.go,
    pq/worker.go, responses.go:
    - Updates wrt go.crypto branch packet.Read.
    - Fixed an issue where valid public keys preceding an
      invalid public key were not send to the channel.
      LP: #1090980
  * pgp.go, pgp_types.go:
    - Updated unknown/unsupported packet parsing wrt
      changes in go.crypto merge.

 -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 22 Jan 2013 21:10:03 -0600

hockeypuck (0.8) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.8 milestone.
  * cmd/lspgp/main.go, cmd/pktdump/main.go, mgo/worker.go,
    mgo/worker_test.go, pgp.go, pgp_types.go, pq/worker.go,
    responses.go:
    - Switch go.crypto from my fork to proper trunk source.
  * instroot/var/lib/hockeypuck/www/fonts/Droid_Sans =>
    instroot-extra/var/lib/hockeypuck/www/fonts/Droid_Sans
    scripts/crossbuild.sh:
    - Move droid sans font out of debian instroot, used only
      in cross-compile tar build.

  [ Dustin Kirkland ]
  * debian/manpages, debian/install, debian/rules,
    instroot/etc/init/hockeypuck-mgo.conf => debian/upstart,
    removed directory instroot/etc/init:
    - A handful of packaging recommendations

 -- Casey Marshall <casey.marshall@gazzang.com>  Tue, 22 Jan 2013 11:00:00 -0600

hockeypuck (0.7) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.7 milestone.
  * cli/cli.go, cmd/hockeypuck-mgo/main.go, mgo/pks.go, mgo/worker.go,
    pks.go, worker.go: